--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 google-api-python-client==2.58.0
+google-auth==2.11.0
+google-cloud-bigquery-storage==2.14.2
 pandas==1.3.4
 python-dotenv==0.20.0
 requests==2.22.0
